// ==========================================
// 프로젝트: 가치먹자 (Gachi-Meokja)
// 설명: 공동구매 및 실시간 채팅 서비스 DB 설계
// ==========================================

// 1. 사용자 (Users)
Table users {
  id bigint [pk, increment]
  social_id varchar(100) [unique, not null, note: '카카오 소셜 ID']
  full_name varchar(100) [not null]
  nickname varchar(50) [unique, not null]
  university varchar(50) [not null, note: 'Enum: DONGGUK 등']
  current_point int [default: 0, not null]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// 2. 공동구매 파티 (Parties)
// 채팅방(ChatRoom)의 역할도 겸합니다. (party_id = chat_room_id)
Table parties {
  party_id bigint [pk, increment]
  creator_id bigint [not null, note: '개설자 (users.id)']

  // 식당 및 배달 정보 (직접 입력)
  restaurant varchar(100) [not null, note: '가게 이름 (예: 엽기떡볶이)']
  title varchar(255) [not null]
  content text
  pickup_location varchar(255) [not null, note: '수령 위치']
  naver_map_url varchar(500) [note: '네이버 지도 링크']

  // 금액 및 상태 관리
  target_amount int [not null, note: '목표 금액']
  current_amount int [not null, default: 0, note: '현재 모인 금액']
  status varchar(20) [not null, default: 'OPEN', note: 'Enum: OPEN(모집중), CLOSED(마감)']

  // 시간 정보
  end_at datetime [not null, note: '모집 마감 시간']
  created_at datetime [default: `now()`]

  // 채팅방 연결 (논리적 연결)
  chat_room_id bigint [note: 'party_id와 동일한 값 사용']
}

// 3. 파티 참여자 (Party Members)
// N:M 관계 해소 테이블
Table party_members {
  party_member_id bigint [pk, increment]
  party_id bigint [not null]
  user_id bigint [not null]

  order_amount int [default: 0, note: '개인이 주문한 금액']
  status varchar(20) [default: 'APPROVED', note: 'Enum: APPROVED, BANNED']

  joined_at datetime [default: `now()`]
}

// 4. 채팅 메시지 (Chat Messages)
// 별도의 ChatRoom 테이블 없이 parties 테이블을 참조합니다.
Table chat_messages {
  id bigint [pk, increment]
  room_id bigint [not null, note: 'parties.party_id 와 매핑됨']
  sender_id bigint [not null, note: '보낸 사람 (users.id)']

  content text [not null]
  type varchar(20) [not null, note: 'Enum: ENTER, TALK, LEAVE']

  created_at datetime [default: `now()`]

  // 성능 최적화를 위한 복합 인덱스 (실제 DB 반영 시)
  // indexes {
  //   (room_id, created_at)
  // }
}

// ==========================================
// 관계 정의 (Relationships)
// ==========================================

// 유저 : 파티 (개설자 1명이 여러 파티 생성 가능)
Ref: users.id < parties.creator_id

// 파티 : 참여자 (1개의 파티에 여러 참여자)
Ref: parties.party_id < party_members.party_id [delete: cascade]

// 유저 : 참여자 (1명의 유저가 여러 파티 참여 가능)
Ref: users.id < party_members.user_id

// 파티(채팅방) : 메시지 (1개의 파티에 수많은 메시지)
Ref: parties.party_id < chat_messages.room_id

// 유저 : 메시지 (1명의 유저가 여러 메시지 전송)
Ref: users.id < chat_messages.sender_id